# Corpus-Curator

./: .gitignore  create_doc_ids.py  doc_ids.txt  download_slides.py  get-latest-wiki.py  get_wiki.py  nq-bm25-search.py  prepare_tevatron_corpus.py  prepare_wiki_1.1M_collection.py  pyproject.toml  screenshot_wiki.py  take_screenshot.py  test_latest_wiki.py  trivia-bm25-search.py
wiki-extractor/: extract_wiki_dump.py  extract_wiki_titles.py
