[project]
name = "web-corpus"
version = "0.1.0"
description = "Tools for creating web corpus including screenshotting Wikipedia"
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver-manager",
    "pillow",
    "datasets==3.6.0",
    "tqdm",
    "playwright",
    "wikiextractor",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

